# quant-trading-system

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/specs/: sprint2_hmm_regime_detection.md
notebooks/: 01_hmm_analysis.ipynb
src/: __init__.py
src/data/: __init__.py  ingestion.py
src/features/: __init__.py  regime_features.py
src/models/: __init__.py  hmm_regime.py
src/pipeline/: __init__.py  regime_pipeline.py
src/tracking/: __init__.py  experiment_tracker.py
src/utils/: __init__.py
src/validation/: __init__.py  walk_forward.py
tests/: __init__.py  test_hmm_regime.py  test_hmm_save_load.py  test_ingestion.py  test_regime_features.py  test_walk_forward.py
